@@ -26,6 +26,7 @@
 package jdk.jfr;
 
 import java.lang.annotation.Annotation;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -44,8 +45,8 @@ import jdk.jfr.internal.Utils;
  * @since 9
  */
 public final class EventType {
-    private static final List<String> UNCATEGORIZED = List.of("Uncategorized");
     private final PlatformEventType platformEventType;
+    private final List<String> UNCATEGORIZED = Collections.singletonList("Uncategorized");
     private Map<String, ValueDescriptor> cache; // create lazy to avoid memory overhead
     // helper constructor
     EventType(PlatformEventType platformEventType) {
@@ -78,11 +79,11 @@ public final class EventType {
         Objects.requireNonNull(name);
         if (cache == null) {
             List<ValueDescriptor> fields = getFields();
-            Map<String, ValueDescriptor> newCache = new LinkedHashMap<>(fields.size());
+            Map<String, ValueDescriptor> newCache = new LinkedHashMap<String, ValueDescriptor>(fields.size());
             for (ValueDescriptor v :fields) {
                 newCache.put(v.getName(), v);
             }
-            cache = Map.copyOf(newCache);
+            cache = newCache;
         }
         ValueDescriptor result = cache.get(name);
         if (result == null) {
@@ -229,7 +230,7 @@ public final class EventType {
         if (c == null) {
             return UNCATEGORIZED;
         }
-        return List.of(c.value());
+        return Collections.unmodifiableList(Arrays.asList(c.value()));
     }
 
     // package private
