@@ -38,6 +38,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.Collections;
 import java.util.Locale;
@@ -565,7 +566,7 @@ public final class TaskHelper {
                         if (option.isTerminal()) {
                             return ++i < args.length
                                         ? Stream.of(Arrays.copyOfRange(args, i, args.length))
-                                                .toList()
+                                                .collect(Collectors.toList())
                                         : Collections.emptyList();
 
                         }
@@ -575,7 +576,7 @@ public final class TaskHelper {
                     }
                 } else {
                     return Stream.of(Arrays.copyOfRange(args, i, args.length))
-                                 .toList();
+                                 .collect(Collectors.toList());
                 }
             }
             return Collections.emptyList();
