@@ -51,6 +51,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import jdk.internal.jimage.decompressor.CompressIndexes;
 import jdk.internal.jimage.decompressor.SignatureParser;
 import jdk.internal.jimage.decompressor.StringSharingDecompressor;
@@ -263,7 +264,7 @@ public class StringSharingPlugin extends AbstractPlugin implements ResourcePrevi
                             List<Integer> indexes
                                     = parseResult.types.stream().map((type) -> {
                                         return strings.addString(type);
-                                    }).toList();
+                                    }).collect(Collectors.toList());
                             if (!indexes.isEmpty()) {
                                 out.write(StringSharingDecompressor.EXTERNALIZED_STRING_DESCRIPTOR);
                                 int sigIndex = strings.addString(parseResult.formatted);
